Change installation method

--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     }
   },
   "directories": {
-    "base_dir": "/data/media/iptv",
+    "base_dir": "/opt/IPTV-Manager",
     "data_dir": "data",
     "backup_dir": "backup",
     "log_dir": "logs"
